update all code to more consistent docs and code
